@@ -3,11 +3,13 @@ package nyx.goals;
 import dobby.util.json.NewJson;
 import dobby.util.logging.Logger;
 import nyx.util.ProjectHelper;
+import nyx.util.RepoHelper;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class SyncGoal implements Goal {
-    private static final Logger LOGGER = new Logger(SyncGoal.class);
+    private static final Logger LOGGER = new Logger(SyncGoal.class, true);
 
     @Override
     public GoalResult execute() {
@@ -20,14 +22,22 @@ public class SyncGoal implements Goal {
 
         LOGGER.info("syncing dependencies for project: " + projectConfig.getString("project.name"));
 
-        final List<NewJson> dependencies = projectConfig.getList("project.dependencies").stream().map(o -> (NewJson) o).toList();
+        final List<NewJson> dependencies = projectConfig.getList("project.dependencies").stream().map(o -> (NewJson) o).collect(Collectors.toList());
 
         for (NewJson dependency : dependencies) {
-            LOGGER.info("syncing dependency: " +
-                    dependency.getString("group") + "." +
-                    dependency.getString("name") + ":" +
-                    dependency.getString("version")
-            );
+            final String group = dependency.getString("group");
+            final String name = dependency.getString("name");
+            final String version = dependency.getString("version");
+            LOGGER.info("syncing dependency: " + group + ":" + name + ":" + version);
+
+            if (!RepoHelper.existsInRepo(group, name, version)) {
+                final boolean success = RepoHelper.downloadToRepo(group, name, version);
+
+                if (!success) {
+                    LOGGER.error("Failed to sync dependency: " + group + ":" + name + ":" + version);
+                    return GoalResult.FAILURE;
+                }
+            }
         }
 
         return GoalResult.SUCCESS;
